# Insurance-claims-binary-classification-pipeline-AXA

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: default.yaml
src/axa_ml/: __init__.py  cli.py  config.py  pipeline.py
src/axa_ml/data/: __init__.py  download.py  preprocessing.py
src/axa_ml/model/: __init__.py  evaluate.py  train.py
tests/: conftest.py  test_cli.py  test_config.py  test_download.py  test_evaluate.py  test_pipeline_integration.py  test_preprocessing.py
