[project]
name = "axa-ml"
version = "0.1.0"
description = "Insurance claims binary classification pipeline"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0",
    "optuna>=3.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "rdata>=0.11",
    "requests>=2.31",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "structlog>=23.0",
    "joblib>=1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
axa-ml = "axa_ml.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff – linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["axa_ml"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests",
]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Pyright – static type checking
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__"]
